// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GraphCardMetricTotals Component should handle custom card displays: fulfilled 1`] = `
<div
  className="curiosity-usage-graph__totals"
  data-test="graphMetricTotals-hello-world"
  data-test-data="{"meta":[],"groupMetricId":["hello","world"]}"
>
  <div>
    <div
      className="curiosity-usage-graph__totals-column"
    >
      <Card
        className="curiosity-usage-graph__totals-column-card "
        data-test="graphMetricTotalsCard-0"
        isPlain={true}
        key="051ec9e5c23d532cf292965e42049c1e5c1366ee"
      >
        <CardHeader>
          <CardTitle>
            <Title
              headingLevel="h2"
              size="md"
            >
              lorem
            </Title>
          </CardTitle>
        </CardHeader>
        <CardBody>
          <div>
            t(ipsum-{{data}}, {"testId":"custom test id","data":"{\\"meta\\":[],\\"groupMetricId\\":[\\"hello\\",\\"world\\"]}"})
          </div>
        </CardBody>
        <CardFooter>
          <div>
            dolor sit timestamp
          </div>
        </CardFooter>
      </Card>
      <Card
        className="curiosity-usage-graph__totals-column-card "
        data-test="graphMetricTotalsCard-1"
        isPlain={true}
        key="my custom react key"
      >
        <CardHeader>
          <CardTitle>
            <Title
              headingLevel="h2"
              size="md"
            >
              hello-{"meta":[],"groupMetricId":["hello","world"]}
            </Title>
          </CardTitle>
        </CardHeader>
        <CardBody>
          <div>
            world
          </div>
        </CardBody>
        <CardFooter>
          <div>
            dolor sit timestamp
          </div>
        </CardFooter>
      </Card>
      <Card
        className="curiosity-usage-graph__totals-column-card "
        data-test="graphMetricTotalsCard-2"
        isPlain={true}
        key="387cedd97983da55cfd462f69d03502079d19b11"
      >
        <CardHeader>
          <CardTitle>
            <Title
              headingLevel="h2"
              size="md"
            >
              dolor
            </Title>
          </CardTitle>
        </CardHeader>
        <CardBody>
          <div>
            sit
          </div>
        </CardBody>
        <CardFooter>
          <div>
            dolor sit timestamp-{"meta":[],"groupMetricId":["hello","world"]}
          </div>
        </CardFooter>
      </Card>
    </div>
  </div>
  <div>
    <div
      className="curiosity-usage-graph__totals-graph-column"
    />
  </div>
</div>
`;

exports[`GraphCardMetricTotals Component should handle multiple display states: error 1`] = `
<div
  className="curiosity-usage-graph__totals"
  data-test="graphMetricTotals-hello-world"
  data-test-data="{"meta":[],"groupMetricId":["hello","world"]}"
>
  <div>
    <div
      className="curiosity-usage-graph__totals-column"
    >
      <Card
        className="curiosity-usage-graph__totals-column-card blur"
        data-test="graphMetricTotalsCard-0"
        isPlain={true}
        key="051ec9e5c23d532cf292965e42049c1e5c1366ee"
      >
        <CardHeader>
          <CardTitle>
            <Title
              headingLevel="h2"
              size="md"
            />
          </CardTitle>
        </CardHeader>
        <CardBody>
          <div />
        </CardBody>
        <CardFooter>
          <div />
        </CardFooter>
      </Card>
    </div>
  </div>
  <div>
    <div
      className="curiosity-usage-graph__totals-graph-column"
    />
  </div>
</div>
`;

exports[`GraphCardMetricTotals Component should handle multiple display states: fulfilled 1`] = `
<div
  className="curiosity-usage-graph__totals"
  data-test="graphMetricTotals-hello-world"
  data-test-data="{"meta":[],"groupMetricId":["hello","world"]}"
>
  <div>
    <div
      className="curiosity-usage-graph__totals-column"
    >
      <Card
        className="curiosity-usage-graph__totals-column-card "
        data-test="graphMetricTotalsCard-0"
        isPlain={true}
        key="051ec9e5c23d532cf292965e42049c1e5c1366ee"
      >
        <CardHeader>
          <CardTitle>
            <Title
              headingLevel="h2"
              size="md"
            >
              lorem
            </Title>
          </CardTitle>
        </CardHeader>
        <CardBody>
          <div>
            ipsum
          </div>
        </CardBody>
        <CardFooter>
          <div>
            dolor sit
          </div>
        </CardFooter>
      </Card>
    </div>
  </div>
  <div>
    <div
      className="curiosity-usage-graph__totals-graph-column"
    />
  </div>
</div>
`;

exports[`GraphCardMetricTotals Component should handle multiple display states: pending 1`] = `
<div
  className="curiosity-usage-graph__totals"
  data-test="graphMetricTotals-hello-world"
  data-test-data="{"meta":[],"groupMetricId":["hello","world"]}"
>
  <div>
    <div
      className="curiosity-usage-graph__totals-column"
    >
      <Card
        className="curiosity-usage-graph__totals-column-card "
        data-test="graphMetricTotalsCard-0"
        isPlain={true}
        key="051ec9e5c23d532cf292965e42049c1e5c1366ee"
      >
        <CardHeader>
          <CardTitle>
            <Title
              headingLevel="h2"
              size="md"
            >
              <Loader
                skeletonProps={
                  {
                    "size": "lg",
                  }
                }
                tableProps={{}}
                variant="skeleton"
              />
            </Title>
          </CardTitle>
        </CardHeader>
        <CardBody>
          <div>
            <Loader
              skeletonProps={
                {
                  "height": "60px",
                  "size": "lg",
                }
              }
              tableProps={{}}
              variant="skeleton"
            />
          </div>
        </CardBody>
        <CardFooter>
          <div>
            <Loader
              skeletonProps={
                {
                  "size": "lg",
                }
              }
              tableProps={{}}
              variant="skeleton"
            />
          </div>
        </CardFooter>
      </Card>
    </div>
  </div>
  <div>
    <div
      className="curiosity-usage-graph__totals-graph-column"
    />
  </div>
</div>
`;

exports[`GraphCardMetricTotals Component should render a basic component: basic 1`] = `
<div
  className="curiosity-usage-graph__standalone"
  data-test="graphStandalone"
>
  lorem ipsum
</div>
`;
